Use getData instead of getVisibleItems in AsyncTableCell
Signed-off-by: sugarylump <alexcarvalhoflores@gmail.com>